# roominar

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: main.py  utils.py
backend/alembic/: env.py
backend/api/: router.py
backend/core/: code.py  config.py  dependencies.py  exception.py  response.py
backend/db/: database.py
backend/mails/: mail.py
backend/models/: __init__.py  base.py  user.py
frontend/: .eslintrc.json  .gitignore  .prettierrc  README.md  next.config.js  openapitools.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/(routes)/: error.tsx  layout.tsx
frontend/app/contexts/: ReduxProvider.tsx  UIProvider.tsx
frontend/components/: Accordion.tsx  Badge.tsx  Category.tsx  Chip.tsx  DateTimeBetween.tsx  Drawer.tsx  Footer.tsx  Head.tsx  Header.tsx  Label.tsx  Logo.tsx  Navbar.tsx  Popover.tsx  RadioGroup.tsx  Tabs.tsx  Timeline.tsx  icons.tsx  theme-switch.tsx
frontend/components/Button/: Button.tsx
frontend/components/Card/: EventCard.tsx  OrganizationCard.tsx  SpeakerCard.tsx
frontend/components/Datetime/: Calendar.tsx  DateRangePicker.tsx
frontend/components/Event/: EventDetail.tsx
frontend/components/Form/: AudLoginForm.tsx  AudRegisterForm.tsx  Form.tsx
frontend/components/Input/: Checkbox.tsx  Input.css  SelectInput.tsx  TextInput.tsx
frontend/components/Loader/: DotLoader.css  (+3 more)
frontend/config/: colors.ts  styles.ts
frontend/lib/: utils.ts
frontend/styles/: custom.module.css  globals.css
(+31 files in other folders)
