[tool.poetry]
name = "roominar"
version = "0.1.0"
description = "Webinar Event Management System"
authors = ["Z-zenos <hoanganhtuanbk2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
sqlmodel = "^0.0.19"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
pytz = "^2024.1"
geoalchemy2 = "^0.15.2"
jwt = "^1.3.1"
jose = "^1.0.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
mypy = "^1.10.1"
pre-commit = "^3.7.1"


[tool.ruff]
line-length=79
target-version = 'py310'

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pycodestyle
  "E4",
  "E7",
  "E9",
  # isort
  "I",
  # pep8-naming
  "N",
]

# [tool.mypy]
# python_version = "3.10"
# strict = true
# mypy_path = "./app/"
# allow_untyped_globals = true
# check_untyped_defs = true
# disallow_any_decorated = true
# disallow_any_generics = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
# ignore_missing_imports = false
# show_error_codes = true
# warn_return_any = true
# warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
